[project]
name = "fealden"
authors = [{name = "Andrew J. Bonham", email = "bonham@gmail.com"}]
readme = "README.md"
description = "Tool for generating optimized nucleic acid biosensor sequences."
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3 :: Only",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: OS Independent",
]
dependencies = [
        "RNAstructure @ https://rna.urmc.rochester.edu/RNAstructure.html",
]
keywords = ["biosensor", "aptamer", "DNA"]
version = "0.2.1"

[project.urls]
Homepage = "https://github.com/Paradoxdruid/fealden"

[project.scripts]
fealden = "bin/fealden:__main__"

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "flake8",
    "isort",
    "pyupgrade",
]

[tool.setuptools]
packages = ["fealden"]

[tool.setuptools.package-data]
fealden = ["config.ini", "../README.md"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
strict = true
files = "fealden/*.py"

[tool.isort]
profile = "black"
