[project]
name = "fealden"
authors = [{name = "Andrew J. Bonham", email = "bonham@gmail.com"}]
readme = "README.md"
description = "Tool for generating optimized nucleic acid biosensor sequences."
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3 :: Only",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: OS Independent",
]
dependencies = [
        "python-dotenv",
        "RNAstructure @ https://rna.urmc.rochester.edu/RNAstructure.html",
        "unafold3.8 @ http://www.unafold.org/Dinamelt/software/obtaining-unafold.php",
        "mfold3.6 @ http://www.unafold.org/mfold/software/download-mfold.php"
]
keywords = ["biosensor", "aptamer", "DNA"]
version = "0.3.2"

[project.urls]
Homepage = "https://github.com/Paradoxdruid/fealden"

[project.scripts]
fealden = "fealden:__main__"

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "flake8",
    "isort",
    "pyupgrade",
]

[tool.setuptools]
packages = ["fealden"]

[tool.setuptools.package-data]
fealden = ["../README.md"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
strict = true
files = "fealden/*.py"

[tool.isort]
profile = "black"

[tool.ruff]
select = ["E", "F", "B", "W", "I", "C4", "PIE", "PYI"]
ignore = ["B905"]
